additional changes index.js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Leon's Movies</title>
+    <title>Code Challenge</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"
@@ -25,7 +25,9 @@
       <div class="four wide column">
         <div class="list-container">
           <!-- side menu -->
-          <li class="ui divided list" id="films"></li>
+          <ul class="ui divided list" id="films">
+            <li class="film item">Movie titles will go here.</li>
+          </ul>
         </div>
       </div>
 
